[package]
	authors = ["Ian Pratt <ianjdpratt@gmail.com>"]
	categories = [
		"command-line-utilities",
		"development-tools",
		"programming-tools",
	]
	description = "The JavaScript executable bundler for Node.js projects"
	edition = "2021"
	keywords = ["cli", "javascript", "node-sea", "nodejs", "sea"]
	license = "MIT"
	name = "jundler"
	version = "0.2.0"

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	# Error handling 
	anyhow = "^1.0.86"

	# CLI parsing
	clap = { version = "^4.5.7", features = ["derive"] }

	# Project configuration parsing
	semver     = "^1.0.23"                                       # To parse NodeJS versions
	serde      = { version = "^1.0.203", features = ["derive"] } # To parse json files
	serde_json = "^1.0.118"                                      # To parse json files

	# Node binary download + extraction
	flate2  = "^1.0.30"
	reqwest = { version = "^0.12.5", features = ["blocking"] }
	tar     = "^0.4.41"
	zip     = "^2.1.3"

	# Logging 
	env_logger = "0.11.3"  # For logging things
	log        = "^0.4.21" # For logging things

	# Misc.
	fs_extra = "^1.3.0" # For copying files
	rand     = "^0.8.5" # For random temporary directory names
	tempdir  = "^0.3.7" # For temporary directories

[dev-dependencies]
	assert_fs = "^1.1.1" # For testing file system operations
