[package]
	authors = ["Ian Pratt <ianjdpratt@gmail.com>"]
	categories = [
		"command-line-utilities",
		"development-tools",
		"development-tools::build-utils",
	]
	description = "The JavaScript executable bundler for Node.js projects"
	edition = "2021"
	keywords = ["binaries", "bundler", "cli", "javascript", "nodejs"]
	license = "MIT"
	name = "jundler"
	readme = "README.md"
	repository = "https://github.com/cogsandsquigs/jundler"
	version = "0.2.2"

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	# Error handling 
	anyhow    = "^1.0.86"
	thiserror = "^1.0.61"

	# CLI parsing
	clap = { version = "^4.5.7", features = ["derive"] }

	# Project configuration + other parsing
	bincode    = "^1.3.3"                                        # Lockfile parsing for node version storage
	hex        = "^0.4.3"                                        # For hex encoding/decoding
	nom        = "^7.1.3"                                        # Parsing lockfiles
	semver     = { version = "^1.0.23", features = ["serde"] }   # Parse NodeJS versions
	serde      = { version = "^1.0.203", features = ["derive"] } # (De)serialize data
	serde_json = "^1.0.118"                                      # Parse json files

	# Node binary download + extraction
	flate2  = "^1.0.30"                                        # For decompressing .gz files
	reqwest = { version = "^0.12.5", features = ["blocking"] } # downloading files
	sha2    = "^0.10.8"                                        # Hashing + digests
	tar     = "^0.4.41"                                        # For extracting tarballs
	zip     = "^2.1.3"                                         # For extracting zip files
	zstd    = "^0.13.1"                                        # Archiving node binaries

	# UI
	console    = "^0.15.8" # For colored output
	env_logger = "^0.11.3" # For logging things
	indicatif  = "^0.17.8" # For progress bars
	log        = "^0.4.21" # For logging things

	# Misc.
	dirs     = "5.0.1"  # Getting user's cache directory
	fs_extra = "^1.3.0" # For copying files
	rand     = "^0.8.5" # For random temporary directory names
	tempdir  = "^0.3.7" # For temporary directories

[dev-dependencies]
	assert_fs = "^1.1.1" # For testing file system operations
